# codebaseArchaeologist

./: .gitignore  main.py  pyproject.toml  requirements.txt
codearch/: __init__.py  cli.py  eval.py  generate.py  index.py  ingest_github.py  normalize.py  retrieve.py
data/: code_1.txt  commit_1.txt  doc_1.txt  issue_1.txt  pr_1.txt
data/raw/fastapi_fastapi/: commits.json  issues.json  pulls.json
data/raw/octocat_Hello-World/: commits.json  issues.json  pulls.json
evaluations/: sample_eval.json
experiments/: tiny_rag.py
tests/: test_cli.py  test_eval.py  test_generate.py  test_index.py  test_ingest_github.py  test_normalize.py  test_packaging.py  test_retrieve.py
